assets/css/store.css
/* Product Post */
.rstore-product-summary {
  overflow: hidden;
  position: relative;
  margin: 0;
}

.rstore-product-summary:after {
  position: absolute;
  content: "";
  bottom: 0;
  left: 0;
  height: 2em;
  pointer-events: none;
}

.rstore-add-to-cart-form input[type=number].rstore-quantity {
  display: inline-block;
  margin-right: 10px;
  padding: 0.5278em;
  width: 4em;
}

.rstore-add-to-cart-form .rstore-loading {
  margin-left: 5px;
}

.rstore-cart {
  display: inline-block;
}

.rstore-loading {
  display: inline-block;
  vertical-align: middle;
  width: 28px;
  height: 28px;
  background-image: url("../images/loading.svg");
  background-size: 28px 28px;
  background-repeat: no-repeat;
}

.rstore-loading.rstore-loading-hidden,
.rstore-cart.rstore-cart-hidden,
.rstore-cart.rstore-message-hidden {
  display: none;
}

.rstore-pricing {
  font-size: 0.8em;
}

.rstore-price {
  margin-right: 5px;
  font-size: 1.25rem;
  font-weight: bold;
}

.rstore-retail-price {
  font-size: 1.25rem;
  font-weight: normal;
  color: #ccc;
  text-decoration: line-through;
  padding-right: 5px;
}

.rstore-term {
  margin-left: 5px;
  font-size: 0.9em;
}

.rstore-domain-search .form-container {
  align-items: center;
}
.rstore-domain-search .form-container .search-form {
  display: flex;
}
.rstore-domain-search .form-container .search-form .search-field {
  flex-grow: 4;
  -webkit-border-radius: 5px 0 0 5px;
  border-radius: 5px 0 0 5px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  border-right: 0;
}
.rstore-domain-search .form-container .search-form .search-submit {
  flex-grow: 1;
  -webkit-border-radius: 0 5px 5px 0;
  border-radius: 0 5px 5px 0;
}
.rstore-domain-search .form-container .search-form .search-field, .rstore-domain-search .form-container .search-form .search-submit {
  display: inline;
  margin: 0;
}
@media (min-width: 1200px) {
  .rstore-domain-search {
    white-space: nowrap;
  }
  .rstore-domain-search button {
    margin: 10px;
    float: right;
  }
}
@media (max-width: 1200px) {
  .rstore-domain-search button {
    position: relative;
    width: 100%;
    margin-top: 0.3em;
  }
}
.rstore-domain-search .domain-result {
  border: 1px solid #e8e8e8;
  float: left;
  min-width: 290px;
  padding: 10px 20px 10px 15px;
  vertical-align: middle;
  width: 99%;
}
.rstore-exact-domain-list .rstore-domain-search .domain-result {
  margin-bottom: 15px;
  border: 3px solid #e8e8e8;
}
.rstore-domain-search p.available,
.rstore-domain-search p.not-available {
  font-weight: bold;
  font-size: 1.2em;
  margin: 10px 0 15px;
  text-overflow: ellipsis;
  overflow: auto;
}
.rstore-domain-search .domain-name {
  display: inline-block;
  vertical-align: middle;
  vertical-align: -webkit-baseline-middle;
  word-break: break-word;
  padding: 10px 0;
}
.rstore-domain-search .purchase-info {
  display: block;
  float: right;
}
.rstore-domain-search .pricing {
  display: inline-block;
  margin-left: 10px;
  text-align: right;
  vertical-align: middle;
}
.rstore-domain-search .listPrice {
  margin-right: 7px;
}
.rstore-domain-search .rstore-disclaimer {
  clear: both;
}
.rstore-domain-search .rstore-domain-buy-button {
  margin-left: 10px;
}
.rstore-domain-search .rstore-disclaimer pre {
  font-family: sans-serif;
  background: none;
  border: none;
  font-size: 10px;
  font-weight: 100;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
}

/**-------------------
 *SEARCH POPUP
 *--------------------**/
#rstore-blackout {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.75);
  z-index: 9999;
  position: fixed;
  top: 0;
  display: none;
}

#rstore-closePop {
  width: 100%;
  text-align: right;
  color: red;
  cursor: pointer;
}

#rstore-popResults {
  height: auto;
  top: 1%;
  position: fixed;
  background-color: rgba(255, 255, 255, 0.75);
  z-index: 99999;
  padding: 5px 20px 20px;
  min-width: 345px;
  display: none;
}

@media (min-width: 860px) {
  #rstore-popResults {
    width: 70vw;
    left: 15vw;
    top: 15%;
  }
}
.rstore-message span.dashicons {
  width: 28px;
  height: 28px;
  font-size: 28px;
}

.rstore-message .rstore-success {
  color: #41a62a;
}

.rstore-message .rstore-error {
  color: #a62b2b;
}

.rstore-product-icons svg {
  width: 8rem;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
.rstore-product-icons svg .svg-fill-primary-o {
  fill: #3690FF;
}
.rstore-product-icons svg .svg-fill-black {
  fill: #000000;
}
.rstore-product-icons svg .svg-fill-gray-light {
  fill: #AEA99C;
}
.rstore-product-icons svg .svg-fill-white {
  fill: #FFFFFF;
}
.rstore-product-icons svg .svg-fill-wordpress {
  fill: #00749A;
}
.rstore-product-icons svg .svg-fill-cpanel {
  fill: #F26C31;
}
.rstore-product-icons svg .svg-fill-windows {
  fill: #F22307;
}

